# sefr

./: Cargo.toml  README.md  readme.md
src/: config.rs  engine.rs  main.rs  suggestion_adapter.rs  util.rs
