[package]
name = "sefr"
version = "0.3.2"
authors = ["Dmitry Narkevich <me@dmitry.lol>"]
edition = "2018"
description = "Terminal program for interactively opening search engines / parametric URLs."
repository = "https://github.com/efskap/sefr"
readme = "README.md"
keywords = ["terminal", "search"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
crossterm = "0.9.4"
minreq = { version = "1.1.2", features = ["https"] }
json = "0.11"
webbrowser = "0.5"
toml = "0.4"
serde = {version = "1.0", features = ["derive"]}
directories = "1.0"
percent-encoding = "1.0.1"
